# prdash

./: .gitignore  CLAUDE.md  LICENSE  PRODUCT_GUIDELINES.md  README.md  WORK_TRACKER.md  pyproject.toml
.claude/commands/: next-task.md
.claude/skills/new-task/: SKILL.md
.github/workflows/: ci.yml  release.yml
agent_docs/: code_style.md  data_models.md  github_api.md  testing.md  textual_tui.md
docs/superpowers/plans/: 2026-04-10-t52-clipboard-copy.md  2026-04-10-t52-clipboard-copy.md.tasks.json
docs/superpowers/specs/: 2026-03-25-github-org-homebrew-distribution-design.md  2026-03-26-review-group-reclassification-design.md  2026-04-02-t74-pr-row-layout-design.md  2026-04-10-t52-clipboard-copy-design.md
homebrew/.github/workflows/: update-formula.yml
homebrew/Formula/: prdash.rb
scripts/: update-formula.sh
src/gh_review_dashboard/: __main__.py  app.py  app.tcss  auth.py  config.py  detect.py  exceptions.py  models.py  updater.py
src/gh_review_dashboard/github/: __init__.py  client.py  queries.py
src/gh_review_dashboard/screens/: __init__.py  query_groups.py  settings.py  setup_wizard.py
src/gh_review_dashboard/widgets/: __init__.py  detail_pane.py  pr_list.py
src/prdash/: __main__.py  app.py  app.tcss  auth.py  clipboard.py  config.py  detect.py  exceptions.py  models.py  state.py  updater.py
src/prdash/github/: __init__.py  client.py  queries.py
src/prdash/screens/: __init__.py  help.py  query_groups.py  settings.py  setup_wizard.py
src/prdash/widgets/: __init__.py  detail_pane.py  (+1 more)
tasks/: T01.md  T02.md  T03.md  T04.md  T05.md  T06.md  T07.md  T08.md  T09.md  T10.md  T11.md  T12.md  T13.md  T14.md  T15.md  T16.md  T17.md  T18.md  T19.md  T20.md  T21.md  T22.md  T23.md  T24.md  T25.md  T26.md  T27.md  T28.md  T29.md  T30.md  T31.md  T32.md  T33.md  T34.md  T36.md  T37.md  T38.md  T40.md  T41.md  T42.md  (+33 more)
tests/: conftest.py  test_app.py  test_auth.py  test_clipboard.py  test_config.py  test_detail_pane.py  test_detect.py  test_github_client.py  test_main.py  test_models.py  test_pr_list.py  test_query_groups.py  test_settings.py  test_setup_wizard.py  test_state.py  test_updater.py
