[project]
name = "gh-review-dashboard"
version = "0.1.0"
description = "Terminal-based TUI dashboard for monitoring GitHub PRs requiring your attention"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual",
    "httpx",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_review_dashboard"]

[project.scripts]
ghrd = "gh_review_dashboard.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
]
