[project]
name = "prdash"
version = "0.1.0"
description = "Terminal-based TUI dashboard for monitoring GitHub PRs requiring your attention"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual",
    "httpx",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prdash"]

[project.scripts]
prdash = "prdash.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
]
