[project]
name = "prdash"
dynamic = ["version"]
description = "Terminal-based TUI dashboard for monitoring GitHub PRs requiring your attention"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "prdash contributors" }]
urls.Homepage = "https://github.com/prdash/prdash"
urls.Repository = "https://github.com/prdash/prdash"
urls.Issues = "https://github.com/prdash/prdash/issues"
dependencies = [
    "textual",
    "httpx",
    "pydantic",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/prdash/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/prdash"]

[project.scripts]
prdash = "prdash.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
]
